Load Game Refactoring Added a unit test Fixed spacing Moved scripts and styles to bundles

--- a/TicTacToeGame/TicTacToe.Web/Content/Default/Site.css
+++ b/TicTacToeGame/TicTacToe.Web/Content/Default/Site.css
@@ -15,3 +15,11 @@
 input, select, textarea {
     max-width: 280px;
 }
+
+.mvc-grid-pager {
+    text-align: center;
+}
+
+#back-to-main-menu-button {
+    margin-left: 42%;
+}
